--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 nav ul {
-    overflow: hidden;
-    background-color: #333;
+  overflow: hidden;
+  background-color: #333;
 }
-  
+
 nav  li {
-    float: left;
+  float: left;
 }
-  
+
 nav li a {
     display: block;
     color: white;
@@ -27,39 +27,6 @@ nav  li a:hover {
 }
 
 
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 100px;
-  }
-  
-  .fa:hover {
-    opacity: 0.7;
-  }
-  
-  .fa-facebook {
-    background: #3B5998;
-    color: white;
-  }
-  
-  .fa-linkedin {
-    background: #007ab5;
-    color: white;
-  }
-
-#it-skills{
-    background-color: #343a40;
-    padding-bottom: 50px;
-    margin-bottom: 50px;
-}
-
-#it-skills{
-    color: white;
-}
-
 button {
   background-color: DodgerBlue;
   border: none;
@@ -73,8 +40,24 @@ button:hover {
   background-color: RoyalBlue;
 }
 
-body{}
+body{
+  display: flex;
+  flex-direction: column;
+}
 
+main{
+  display: flex;
+  flex-direction: row;
+  flex: auto;
+}
+article{
+  flex: 2;
+  overflow-y: auto;
+}
+aside{
+  flex: 1;
+  overflow-y: auto;
+}
 #avatar{
   max-width: 300px;
   display: block;
@@ -88,19 +71,18 @@ body{}
   font-size: 1.3em
 }
 
-#portfolio{
-  display: block;
-  width: 100%;
+#portfolio h4{
+  
+  margin: auto;
+  text-align: center;
 }
 
 #portfolio img{
-  max-width: 300px;
+  max-width: 250px;
 }
 
 #portfolio div{
+  display: block;
   float: left;
-}
-
-footer {
-  clear: both;
+  margin-bottom: 40px;
 }
