--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,6 @@ aside{
   flex: 1;
   overflow-y: auto;
 }
-#avatar{
-  max-width: 300px;
-  display: block;
-  margin: auto;
-}
 
 #introduction{ 
   text-align: center;
@@ -71,16 +66,23 @@ aside{
   font-size: 1.3em
 }
 
-#portfolio h4{
-  
+#portfolio h3{
   margin: auto;
   text-align: center;
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
-
+#portfolio div{
+  margin: 5px;
+  padding: 4px;
+  max-height: 280px;
+}
 #portfolio img{
+  max-width: 200px;
+}
+#portfolio p, h4{
   max-width: 250px;
 }
-
 #portfolio div{
   display: block;
   float: left;
