--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,5 @@
-nav ul {
-  overflow: hidden;
-  background-color: #333;
-}
-
-nav  li {
-  float: left;
-}
-
-nav li a {
-    display: block;
-    color: white;
-    padding: 14px 16px;
-}
-
-nav  li a:hover {
-    background-color: #111;
-  }
-
-#experience{
-    margin-left: 15%;
-    padding-right: 15%;
-}
-
-#contacts{
-    margin:auto; width: 30%; padding-bottom: 5%;
-}
-
-
-button {
-  background-color: DodgerBlue;
-  border: none;
-  color: white;
-  padding: 12px 30px;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-button:hover {
-  background-color: RoyalBlue;
+html {
+  scroll-behavior: smooth;
 }
 
 body{
